--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
       ul li{
       font-family: Montserrat, Arial, sans-serif;
-      font-size: .8em;
+      font-size: .85em;
       line-height: 1.5;
   
     }
@@ -66,7 +66,7 @@
       margin-bottom: 10px;
     }
     img{
-      margin:10px;
+      margin-bottom:50px;
       height:500px;
       
     }
