--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
       padding: 10px;
     }
       ul li{
-      font-family: Montserrat, Arial, sans-serif;
+      font-family: "Montserrat", "Arial", sans-serif;
       font-size: .85em;
       line-height: 1.5;
   
     }
     h1{
-      font-family:"Viaoda Libre", serif;
+      font-family:"Viaoda Libre", "Times New Roman" serif;
       font-size: 2.5em;
       color:#0d1994;
       margin-bottom: 20px;
       letter-spacing: .08em;
     }
     h2{
-      font-family:"Viaoda Libre", serif;
+      font-family:"Viaoda Libre", "Times New Roman", serif;
       font-size:1.5em;
        color:#0d1994;
       margin-bottom: 20px;
     }
     h3{
-      font-family:"Viaoda Libre", serif;
+      font-family:"Viaoda Libre", "Times New Roman", serif;
       font-size: 1.25em;
        color:#0d1994;
       margin-bottom: 20px;
